[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
name = "nomad-distribution"
description = "nomad distribution template"
version = "0.1"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[parsing, infrastructure]>=1.3.4",
  "perovskite-solar-cell-database",
  "nomad-porous-materials",
  "nomad-aitoolkit",
  "nomad-simulations==0.0.1",
  "pynxtools[convert]==0.5.0",
  "nomad-schema-plugin-run>=1.0.1",
  "nomad-schema-plugin-simulation-workflow>=1.0.1",
  "nomad-normalizer-plugin-bandstructure>=1.0",
  "nomad-normalizer-plugin-dos>=1.0",
  "nomad-normalizer-plugin-soap>=1.0",
  "nomad-normalizer-plugin-spectra>=1.0",
  "nomad-normalizer-plugin-system>=1.0",
  "nomad-normalizer-plugin-simulation-workflow>=1.0",
  "eelsdbconverter",
  "nomad-parser-plugins-electronic>=1.0",
  "nomad-parser-plugins-atomistic>=1.0",
  "nomad-parser-plugins-workflow>=1.0",
  "nomad-parser-plugins-database>=1.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
nomad-lab = { workspace = true }
eelsdbconverter = { git = "https://github.com/nomad-coe/nomad-parser-eelsdb.git", branch = "entry-point" }
nomad-aitoolkit = { git = "https://github.com/FAIRmat-NFDI/nomad-aitoolkit.git", rev = "b203f8eb28dc4b6771a39d5c5b7ad3d9d8583ac8" }
nomad-porous-materials = { git = "https://github.com/FAIRmat-NFDI/nomad-porous-materials.git", rev = "522f4a3208077f534f1c5e886527ee2104283d0b" }
perovskite-solar-cell-database = { git = "https://github.com/FAIRmat-NFDI/nomad-perovskite-solar-cells-database.git", rev = "f394d21abafeb659729af0c94e5f90949fce01c1" }

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
dev-dependencies = [
  "nomad-lab[parsing, infrastructure, dev]>=1.3.4",
  "poethepoet>=0.29.0",
]
constraint-dependencies = ["hyperspy>=1.7.6"]

[tool.poe.tasks]
submodule = "git submodule update --init --recursive"
start = "nomad admin run appworker"
setup = ["submodule", "gui-env", "gui-setup"]
lint = ["ruff-lint", "ruff-format"]

[tool.poe.tasks.gui-env]
cmd = "python -m nomad.cli dev gui-env"
capture_stdout = "packages/nomad-FAIR/gui/.env.development"

[tool.poe.tasks.docs]
cmd = "mkdocs serve"
cwd = "packages/nomad-FAIR"

[tool.poe.tasks.ruff-lint]
cmd = "ruff check ."

[tool.poe.tasks.ruff-format]
cmd = "ruff format . --check"

[tool.poe.tasks.gui]
cmd = "yarn run"
cwd = "packages/nomad-FAIR/gui"

[tool.poe.tasks.gui-setup]
cmd = "yarn"
cwd = "packages/nomad-FAIR/gui"

[tool.poe.tasks.gen-gui-test-env]
cmd = "python -m nomad.cli dev gui-config"
capture_stdout = "packages/nomad-FAIR/gui/tests/env.js"
env = { NOMAD_CONFIG = "gui/tests/nomad.yaml" }

[tool.poe.tasks.gen-gui-test-artifacts]
cmd = "python -m nomad.cli dev gui-artifacts"
capture_stdout = "packages/nomad-FAIR/gui/tests/artifacts.js"
env = { NOMAD_CONFIG = "gui/tests/nomad.yaml" }
deps = ["gen-gui-test-env"]

[tool.poe.tasks.gen-nomad-lock]
cmd = "uv pip compile -U --universal -p 3.11 --extra parsing --extra infrastructure --extra dev --annotation-style=line pyproject.toml requirements.txt"
capture_stdout = "packages/nomad-FAIR/requirements-dev.txt"
cwd = "packages/nomad-FAIR"
deps = ["gen-nomad-lock-without-dev"]

[tool.poe.tasks.gen-nomad-lock-without-dev]
cmd = "uv pip compile -U --universal -p 3.11 --extra parsing --extra infrastructure --annotation-style=line pyproject.toml"
cwd = "packages/nomad-FAIR"
capture_stdout = "packages/nomad-FAIR/requirements.txt"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
